examples/test/testpolicy10153.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10153
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key7: value26
      key4: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value37
          key24: value27
          key25: value39
      podSelector:
        matchLabels:
          key5: value33
          key20: value40
          key11: value37
